--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       <button type="submit" class="todo__btn">
         <i class="fa-regular fa-paper-plane"></i>
       </button>
-      <div class="select">
+      <!-- <div class="select">
         <select name="todos" class="filter__todo">
           <option value="all">All</option>
           <option value="completed">Completed</option>
           <option value="uncompleted">Uncompleted</option>
         </select>
-      </div>
+      </div> -->
     </form>
     <div class="todo__container">
       <ul class="todo__list"></ul>
