--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <form>
       <input type="text" class="todo__input" />
       <button type="submit" class="todo__btn">
-        <i class="fa-regular fa-paper-plane"></i>
+        <img src="./upload-simple.svg" alt="" class="img" />
+        <!-- <i class="fa-regular fa-paper-plane"></i> -->
       </button>
       <!-- <div class="select">
         <select name="todos" class="filter__todo">
